k8s/targets/dev-aws-us-east-1/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
spec:
  tls:
    - hosts:
        - dev-aws.orchidflow.io
      secretName: portfolio-tls-dev-aws
  rules:
    - host: dev-aws.orchidflow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 5000
